@@ -116,18 +116,24 @@ public class AccessRequestManagerTest {
 
     @ClassRule
     public static RunWithCustomExecutorRule runInThread = new RunWithCustomExecutorRule(
-        VitamThreadPoolExecutor.getDefaultExecutor());
+        VitamThreadPoolExecutor.getDefaultExecutor()
+    );
 
     @Mock
     ObjectReferentialRepository objectReferentialRepository;
+
     @Mock
     ArchiveReferentialRepository archiveReferentialRepository;
+
     @Mock
     AccessRequestReferentialRepository accessRequestReferentialRepository;
+
     @Mock
     ArchiveCacheStorage archiveCacheStorage;
+
     @Mock
     BucketTopologyHelper bucketTopologyHelper;
+
     @Mock
     QueueRepository readWriteQueue;
 
@@ -135,10 +141,21 @@ public class AccessRequestManagerTest {
 
     @Before
     public void before() {
-        instance = new AccessRequestManager(objectReferentialRepository, archiveReferentialRepository,
-            accessRequestReferentialRepository, archiveCacheStorage, bucketTopologyHelper, readWriteQueue,
-            10_000, 30, TimeUnit.MINUTES, 60, TimeUnit.MINUTES,
-            3, TimeUnit.SECONDS);
+        instance = new AccessRequestManager(
+            objectReferentialRepository,
+            archiveReferentialRepository,
+            accessRequestReferentialRepository,
+            archiveCacheStorage,
+            bucketTopologyHelper,
+            readWriteQueue,
+            10_000,
+            30,
+            TimeUnit.MINUTES,
+            60,
+            TimeUnit.MINUTES,
+            3,
+            TimeUnit.SECONDS
+        );
 
         doReturn(FILE_BUCKET_1).when(bucketTopologyHelper).getFileBucketFromContainerName(CONTAINER_1);
         doReturn(FILE_BUCKET_2).when(bucketTopologyHelper).getFileBucketFromContainerName(CONTAINER_2);
@@ -152,43 +169,96 @@ public class AccessRequestManagerTest {
     @After
     public void after() {
         instance.shutdown();
-        verifyNoMoreInteractions(objectReferentialRepository, archiveReferentialRepository,
-            accessRequestReferentialRepository, archiveCacheStorage, readWriteQueue);
+        verifyNoMoreInteractions(
+            objectReferentialRepository,
+            archiveReferentialRepository,
+            accessRequestReferentialRepository,
+            archiveCacheStorage,
+            readWriteQueue
+        );
     }
 
     @Test
     public void givenAvailableAndNonAvailableObjectsWhenCreatingAccessRequestThenAccessRequestOK() throws Exception {
-
         // Given :
-        doReturn(List.of(
-            // obj1 : still in input_file
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
-                100L, "SHA-512", "digest1", "obj1-guid1", new TapeLibraryInputFileObjectStorageLocation(),
-                nextDate(), nextDate()),
-            // obj2 : in tars
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
-                400L, "SHA-512", "digest2", "obj2-guid2", new TapeLibraryTarObjectStorageLocation(
-                List.of(new TarEntryDescription("tarId1", "obj2-0", 1500L, 100L, "digest2-1"),
-                    new TarEntryDescription("tarId2", "obj2-1", 0L, 100L, "digest2-2"),
-                    new TarEntryDescription("tarId3", "obj2-2", 0L, 100L, "digest2-3"),
-                    new TarEntryDescription("tarId4", "obj2-3", 0L, 100L, "digest2-4"))
-            ), nextDate(), nextDate())
-        )).when(objectReferentialRepository).bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
+        doReturn(
+            List.of(
+                // obj1 : still in input_file
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
+                    100L,
+                    "SHA-512",
+                    "digest1",
+                    "obj1-guid1",
+                    new TapeLibraryInputFileObjectStorageLocation(),
+                    nextDate(),
+                    nextDate()
+                ),
+                // obj2 : in tars
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
+                    400L,
+                    "SHA-512",
+                    "digest2",
+                    "obj2-guid2",
+                    new TapeLibraryTarObjectStorageLocation(
+                        List.of(
+                            new TarEntryDescription("tarId1", "obj2-0", 1500L, 100L, "digest2-1"),
+                            new TarEntryDescription("tarId2", "obj2-1", 0L, 100L, "digest2-2"),
+                            new TarEntryDescription("tarId3", "obj2-2", 0L, 100L, "digest2-3"),
+                            new TarEntryDescription("tarId4", "obj2-3", 0L, 100L, "digest2-4")
+                        )
+                    ),
+                    nextDate(),
+                    nextDate()
+                )
+            )
+        )
+            .when(objectReferentialRepository)
+            .bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
 
-        doReturn(List.of(
-            // Tar1 : Ready on disk
-            new TapeArchiveReferentialEntity("tarId1", new TapeLibraryReadyOnDiskArchiveStorageLocation(),
-                EntryType.DATA, 2000L, "digest-tarId1", nextDate()),
-            // Tar2 : Building on disk
-            new TapeArchiveReferentialEntity("tarId2", new TapeLibraryBuildingOnDiskArchiveStorageLocation(),
-                EntryType.DATA, null, null, nextDate()),
-            // Tar3 : On tape + in cache
-            new TapeArchiveReferentialEntity("tarId3", new TapeLibraryOnTapeArchiveStorageLocation("tape1", 1234),
-                EntryType.DATA, 5000L, "digest-tarId3", nextDate()),
-            // Tar4 : Only on tape
-            new TapeArchiveReferentialEntity("tarId4", new TapeLibraryOnTapeArchiveStorageLocation("tape2", 4321),
-                EntryType.DATA, 8000L, "digest-tarId4", nextDate())
-        )).when(archiveReferentialRepository).bulkFind(Set.of("tarId1", "tarId2", "tarId3", "tarId4"));
+        doReturn(
+            List.of(
+                // Tar1 : Ready on disk
+                new TapeArchiveReferentialEntity(
+                    "tarId1",
+                    new TapeLibraryReadyOnDiskArchiveStorageLocation(),
+                    EntryType.DATA,
+                    2000L,
+                    "digest-tarId1",
+                    nextDate()
+                ),
+                // Tar2 : Building on disk
+                new TapeArchiveReferentialEntity(
+                    "tarId2",
+                    new TapeLibraryBuildingOnDiskArchiveStorageLocation(),
+                    EntryType.DATA,
+                    null,
+                    null,
+                    nextDate()
+                ),
+                // Tar3 : On tape + in cache
+                new TapeArchiveReferentialEntity(
+                    "tarId3",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape1", 1234),
+                    EntryType.DATA,
+                    5000L,
+                    "digest-tarId3",
+                    nextDate()
+                ),
+                // Tar4 : Only on tape
+                new TapeArchiveReferentialEntity(
+                    "tarId4",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape2", 4321),
+                    EntryType.DATA,
+                    8000L,
+                    "digest-tarId4",
+                    nextDate()
+                )
+            )
+        )
+            .when(archiveReferentialRepository)
+            .bulkFind(Set.of("tarId1", "tarId2", "tarId3", "tarId4"));
 
         doReturn(true).when(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId3");
         doReturn(false).when(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId4");
@@ -211,7 +281,8 @@ public class AccessRequestManagerTest {
         assertThat(accessRequest.getObjectNames()).containsExactlyInAnyOrder("obj1", "obj2");
         assertThat(accessRequest.getUnavailableArchiveIds()).containsExactly("tarId4");
         assertThat(accessRequest.getCreationDate()).isEqualTo(
-            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now()));
+            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now())
+        );
         assertThat(accessRequest.getReadyDate()).isNull();
         assertThat(accessRequest.getExpirationDate()).isNull();
         assertThat(accessRequest.getPurgeDate()).isNull();
@@ -228,8 +299,9 @@ public class AccessRequestManagerTest {
         verify(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId4");
         verifyNoMoreInteractions(archiveCacheStorage);
 
-        ArgumentCaptor<QueueMessageEntity> queueMessageEntityArgumentCaptor =
-            ArgumentCaptor.forClass(QueueMessageEntity.class);
+        ArgumentCaptor<QueueMessageEntity> queueMessageEntityArgumentCaptor = ArgumentCaptor.forClass(
+            QueueMessageEntity.class
+        );
         verify(readWriteQueue).addIfAbsent(any(), queueMessageEntityArgumentCaptor.capture());
 
         QueueMessageEntity readOrderMessage = queueMessageEntityArgumentCaptor.getValue();
@@ -250,31 +322,74 @@ public class AccessRequestManagerTest {
     public void givenAvailableObjectsWhenCreatingAccessRequestThenAccessRequestOK() throws Exception {
         // Given :
 
-        doReturn(List.of(
-            // obj1 : still in input_file
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
-                100L, "SHA-512", "digest1", "obj1-guid1", new TapeLibraryInputFileObjectStorageLocation(),
-                nextDate(), nextDate()),
-            // obj2 : in tars
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
-                400L, "SHA-512", "digest2", "obj2-guid2", new TapeLibraryTarObjectStorageLocation(
-                List.of(new TarEntryDescription("tarId1", "obj2-0", 1500L, 100L, "digest2-1"),
-                    new TarEntryDescription("tarId2", "obj2-1", 0L, 100L, "digest2-2"),
-                    new TarEntryDescription("tarId3", "obj2-2", 0L, 100L, "digest2-3"))
-            ), nextDate(), nextDate())
-        )).when(objectReferentialRepository).bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
+        doReturn(
+            List.of(
+                // obj1 : still in input_file
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
+                    100L,
+                    "SHA-512",
+                    "digest1",
+                    "obj1-guid1",
+                    new TapeLibraryInputFileObjectStorageLocation(),
+                    nextDate(),
+                    nextDate()
+                ),
+                // obj2 : in tars
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
+                    400L,
+                    "SHA-512",
+                    "digest2",
+                    "obj2-guid2",
+                    new TapeLibraryTarObjectStorageLocation(
+                        List.of(
+                            new TarEntryDescription("tarId1", "obj2-0", 1500L, 100L, "digest2-1"),
+                            new TarEntryDescription("tarId2", "obj2-1", 0L, 100L, "digest2-2"),
+                            new TarEntryDescription("tarId3", "obj2-2", 0L, 100L, "digest2-3")
+                        )
+                    ),
+                    nextDate(),
+                    nextDate()
+                )
+            )
+        )
+            .when(objectReferentialRepository)
+            .bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
 
-        doReturn(List.of(
-            // Tar1 : Ready on disk
-            new TapeArchiveReferentialEntity("tarId1", new TapeLibraryReadyOnDiskArchiveStorageLocation(),
-                EntryType.DATA, 2000L, "digest-tarId1", nextDate()),
-            // Tar2 : Building on disk
-            new TapeArchiveReferentialEntity("tarId2", new TapeLibraryBuildingOnDiskArchiveStorageLocation(),
-                EntryType.DATA, null, null, nextDate()),
-            // Tar3 : On tape + in cache
-            new TapeArchiveReferentialEntity("tarId3", new TapeLibraryOnTapeArchiveStorageLocation("tape1", 1234),
-                EntryType.DATA, 5000L, "digest-tarId3", nextDate())
-        )).when(archiveReferentialRepository).bulkFind(Set.of("tarId1", "tarId2", "tarId3"));
+        doReturn(
+            List.of(
+                // Tar1 : Ready on disk
+                new TapeArchiveReferentialEntity(
+                    "tarId1",
+                    new TapeLibraryReadyOnDiskArchiveStorageLocation(),
+                    EntryType.DATA,
+                    2000L,
+                    "digest-tarId1",
+                    nextDate()
+                ),
+                // Tar2 : Building on disk
+                new TapeArchiveReferentialEntity(
+                    "tarId2",
+                    new TapeLibraryBuildingOnDiskArchiveStorageLocation(),
+                    EntryType.DATA,
+                    null,
+                    null,
+                    nextDate()
+                ),
+                // Tar3 : On tape + in cache
+                new TapeArchiveReferentialEntity(
+                    "tarId3",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape1", 1234),
+                    EntryType.DATA,
+                    5000L,
+                    "digest-tarId3",
+                    nextDate()
+                )
+            )
+        )
+            .when(archiveReferentialRepository)
+            .bulkFind(Set.of("tarId1", "tarId2", "tarId3"));
 
         doReturn(true).when(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId3");
 
@@ -296,12 +411,15 @@ public class AccessRequestManagerTest {
         assertThat(accessRequest.getObjectNames()).containsExactlyInAnyOrder("obj1", "obj2");
         assertThat(accessRequest.getUnavailableArchiveIds()).isEmpty();
         assertThat(accessRequest.getCreationDate()).isEqualTo(
-            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now()));
+            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now())
+        );
         assertThat(accessRequest.getReadyDate()).isEqualTo(LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now()));
         assertThat(accessRequest.getExpirationDate()).isEqualTo(
-            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now().plusMinutes(30)));
+            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now().plusMinutes(30))
+        );
         assertThat(accessRequest.getPurgeDate()).isEqualTo(
-            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now().plusMinutes(60)));
+            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now().plusMinutes(60))
+        );
         assertThat(accessRequest.getVersion()).isEqualTo(0);
 
         verify(objectReferentialRepository).bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
@@ -321,28 +439,74 @@ public class AccessRequestManagerTest {
         throws Exception {
         // Given :
 
-        doReturn(List.of(
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
-                400L, "SHA-512", "digest1", "obj1-guid1", new TapeLibraryTarObjectStorageLocation(
-                List.of(new TarEntryDescription("tarId1", "obj1-0", 1500L, 100L, "digest1-1"),
-                    new TarEntryDescription("tarId1", "obj1-1", 0L, 100L, "digest1-2"),
-                    new TarEntryDescription("tarId2", "obj1-2", 0L, 100L, "digest1-3"))
-            ), nextDate(), nextDate()),
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
-                400L, "SHA-512", "digest2", "obj2-guid1", new TapeLibraryTarObjectStorageLocation(
-                List.of(new TarEntryDescription("tarId2", "obj2-0", 1500L, 100L, "digest2-1"),
-                    new TarEntryDescription("tarId3", "obj2-1", 0L, 100L, "digest2-2"))
-            ), nextDate(), nextDate())
-        )).when(objectReferentialRepository).bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
+        doReturn(
+            List.of(
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
+                    400L,
+                    "SHA-512",
+                    "digest1",
+                    "obj1-guid1",
+                    new TapeLibraryTarObjectStorageLocation(
+                        List.of(
+                            new TarEntryDescription("tarId1", "obj1-0", 1500L, 100L, "digest1-1"),
+                            new TarEntryDescription("tarId1", "obj1-1", 0L, 100L, "digest1-2"),
+                            new TarEntryDescription("tarId2", "obj1-2", 0L, 100L, "digest1-3")
+                        )
+                    ),
+                    nextDate(),
+                    nextDate()
+                ),
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
+                    400L,
+                    "SHA-512",
+                    "digest2",
+                    "obj2-guid1",
+                    new TapeLibraryTarObjectStorageLocation(
+                        List.of(
+                            new TarEntryDescription("tarId2", "obj2-0", 1500L, 100L, "digest2-1"),
+                            new TarEntryDescription("tarId3", "obj2-1", 0L, 100L, "digest2-2")
+                        )
+                    ),
+                    nextDate(),
+                    nextDate()
+                )
+            )
+        )
+            .when(objectReferentialRepository)
+            .bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
 
-        doReturn(List.of(
-            new TapeArchiveReferentialEntity("tarId1", new TapeLibraryOnTapeArchiveStorageLocation("tape2", 4321),
-                EntryType.DATA, 8000L, "digest-tarId1", nextDate()),
-            new TapeArchiveReferentialEntity("tarId2", new TapeLibraryOnTapeArchiveStorageLocation("tape2", 1234),
-                EntryType.DATA, 10000L, "digest-tarId2", nextDate()),
-            new TapeArchiveReferentialEntity("tarId3", new TapeLibraryOnTapeArchiveStorageLocation("tape3", 5643),
-                EntryType.DATA, 12000L, "digest-tarId3", nextDate())
-        )).when(archiveReferentialRepository).bulkFind(Set.of("tarId1", "tarId2", "tarId3"));
+        doReturn(
+            List.of(
+                new TapeArchiveReferentialEntity(
+                    "tarId1",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape2", 4321),
+                    EntryType.DATA,
+                    8000L,
+                    "digest-tarId1",
+                    nextDate()
+                ),
+                new TapeArchiveReferentialEntity(
+                    "tarId2",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape2", 1234),
+                    EntryType.DATA,
+                    10000L,
+                    "digest-tarId2",
+                    nextDate()
+                ),
+                new TapeArchiveReferentialEntity(
+                    "tarId3",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape3", 5643),
+                    EntryType.DATA,
+                    12000L,
+                    "digest-tarId3",
+                    nextDate()
+                )
+            )
+        )
+            .when(archiveReferentialRepository)
+            .bulkFind(Set.of("tarId1", "tarId2", "tarId3"));
 
         doReturn(false).when(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId1");
         doReturn(false).when(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId2");
@@ -366,7 +530,8 @@ public class AccessRequestManagerTest {
         assertThat(accessRequest.getObjectNames()).containsExactlyInAnyOrder("obj1", "obj2");
         assertThat(accessRequest.getUnavailableArchiveIds()).containsExactlyInAnyOrder("tarId1", "tarId2", "tarId3");
         assertThat(accessRequest.getCreationDate()).isEqualTo(
-            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now()));
+            LocalDateUtil.getFormattedDateForMongo(LocalDateUtil.now())
+        );
         assertThat(accessRequest.getReadyDate()).isNull();
         assertThat(accessRequest.getExpirationDate()).isNull();
         assertThat(accessRequest.getPurgeDate()).isNull();
@@ -381,11 +546,13 @@ public class AccessRequestManagerTest {
         verify(archiveCacheStorage, times(3)).containsArchive(eq(FILE_BUCKET_1), anyString());
         verifyNoMoreInteractions(archiveCacheStorage);
 
-        ArgumentCaptor<QueueMessageEntity> queueMessageEntityArgumentCaptor =
-            ArgumentCaptor.forClass(QueueMessageEntity.class);
+        ArgumentCaptor<QueueMessageEntity> queueMessageEntityArgumentCaptor = ArgumentCaptor.forClass(
+            QueueMessageEntity.class
+        );
         verify(readWriteQueue, times(3)).addIfAbsent(any(), queueMessageEntityArgumentCaptor.capture());
 
-        assertThat(queueMessageEntityArgumentCaptor.getAllValues()).extracting(msg -> ((ReadOrder) msg).getFileName())
+        assertThat(queueMessageEntityArgumentCaptor.getAllValues())
+            .extracting(msg -> ((ReadOrder) msg).getFileName())
             .containsExactlyInAnyOrder("tarId1", "tarId2", "tarId3");
 
         verifyNoMoreInteractions(readWriteQueue);
@@ -393,45 +560,44 @@ public class AccessRequestManagerTest {
 
     @Test
     public void givenMissingParametersWhenCreatingAccessRequestThenKO() {
-
-        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(CONTAINER_1, null))
-            .isInstanceOf(IllegalArgumentException.class);
-        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(CONTAINER_1, Arrays.asList("obj1", null)))
-            .isInstanceOf(IllegalArgumentException.class);
-        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(null, List.of("obj1", "obj2")))
-            .isInstanceOf(IllegalArgumentException.class);
-        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(CONTAINER_1, emptyList()))
-            .isInstanceOf(ContentAddressableStorageBadRequestException.class);
+        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(CONTAINER_1, null)).isInstanceOf(
+            IllegalArgumentException.class
+        );
+        Assertions.assertThatThrownBy(
+            () -> instance.createAccessRequest(CONTAINER_1, Arrays.asList("obj1", null))
+        ).isInstanceOf(IllegalArgumentException.class);
+        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(null, List.of("obj1", "obj2"))).isInstanceOf(
+            IllegalArgumentException.class
+        );
+        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(CONTAINER_1, emptyList())).isInstanceOf(
+            ContentAddressableStorageBadRequestException.class
+        );
     }
 
     @Test
     public void givenDuplicateObjectsWhenCreatingAccessRequestThenKO() {
-
         // Given
         List<String> objectIds = List.of("obj1", "obj2", "obj1");
 
         // When / Then
-        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(CONTAINER_1, objectIds))
-            .isInstanceOf(ContentAddressableStorageBadRequestException.class);
+        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(CONTAINER_1, objectIds)).isInstanceOf(
+            ContentAddressableStorageBadRequestException.class
+        );
     }
 
     @Test
     public void givenTooManyObjectsWhenCreatingAccessRequestThenKO() {
-
         // Given
-        List<String> objectIds = IntStream.rangeClosed(1, 10_001)
-            .mapToObj(i -> "obj" + i)
-            .collect(Collectors.toList());
+        List<String> objectIds = IntStream.rangeClosed(1, 10_001).mapToObj(i -> "obj" + i).collect(Collectors.toList());
 
         // When / Then
-        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(CONTAINER_1, objectIds))
-            .isInstanceOf(ContentAddressableStorageBadRequestException.class);
+        Assertions.assertThatThrownBy(() -> instance.createAccessRequest(CONTAINER_1, objectIds)).isInstanceOf(
+            ContentAddressableStorageBadRequestException.class
+        );
     }
 
     @Test
-    public void givenExistingAndNonExistingAccessRequestsWhenCheckAccessRequestStatusesThenOK()
-        throws Exception {
-
+    public void givenExistingAndNonExistingAccessRequestsWhenCheckAccessRequestStatusesThenOK() throws Exception {
         // Given
         logicalClock.freezeTime();
 
@@ -439,61 +605,108 @@ public class AccessRequestManagerTest {
         String accessRequest2 = generateAccessRequestId();
         String accessRequest3 = generateAccessRequestId();
         String unknownAccessRequestId = generateAccessRequestId();
-        doReturn(List.of(
-            // Non-ready access request
-            new TapeAccessRequestReferentialEntity(accessRequest1, CONTAINER_1,
-                List.of("obj1"), getNowMinusMinutes(30), null, null, null, List.of("tarId1"), TENANT_ID, 0),
-
-            // Ready access request
-            new TapeAccessRequestReferentialEntity(accessRequest2, CONTAINER_2,
-                List.of("obj2"), getNowMinusMinutes(30), getNowMinusMinutes(20), getNowPlusMinutes(10),
-                getNowPlusMinutes(40), List.of(), TENANT_ID, 1),
-
-            // Expired access request
-            new TapeAccessRequestReferentialEntity(accessRequest3, CONTAINER_2,
-                List.of("obj3"), getNowMinusMinutes(50), getNowMinusMinutes(40), getNowMinusMinutes(10),
-                getNowPlusMinutes(20), List.of(), TENANT_ID, 1)
-        )).when(accessRequestReferentialRepository)
-            .findByRequestIds(Set.of(accessRequest1, accessRequest2, accessRequest3, unknownAccessRequestId)
-            );
+        doReturn(
+            List.of(
+                // Non-ready access request
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest1,
+                    CONTAINER_1,
+                    List.of("obj1"),
+                    getNowMinusMinutes(30),
+                    null,
+                    null,
+                    null,
+                    List.of("tarId1"),
+                    TENANT_ID,
+                    0
+                ),
+                // Ready access request
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest2,
+                    CONTAINER_2,
+                    List.of("obj2"),
+                    getNowMinusMinutes(30),
+                    getNowMinusMinutes(20),
+                    getNowPlusMinutes(10),
+                    getNowPlusMinutes(40),
+                    List.of(),
+                    TENANT_ID,
+                    1
+                ),
+                // Expired access request
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest3,
+                    CONTAINER_2,
+                    List.of("obj3"),
+                    getNowMinusMinutes(50),
+                    getNowMinusMinutes(40),
+                    getNowMinusMinutes(10),
+                    getNowPlusMinutes(20),
+                    List.of(),
+                    TENANT_ID,
+                    1
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByRequestIds(Set.of(accessRequest1, accessRequest2, accessRequest3, unknownAccessRequestId));
 
         // When
         Map<String, AccessRequestStatus> accessRequestStatuses = instance.checkAccessRequestStatuses(
-            List.of(accessRequest1, accessRequest2, accessRequest3, unknownAccessRequestId), false);
+            List.of(accessRequest1, accessRequest2, accessRequest3, unknownAccessRequestId),
+            false
+        );
 
         // Then
-        assertThat(accessRequestStatuses).isEqualTo(Map.of(
-            accessRequest1, AccessRequestStatus.NOT_READY,
-            accessRequest2, AccessRequestStatus.READY,
-            accessRequest3, AccessRequestStatus.EXPIRED,
-            unknownAccessRequestId, AccessRequestStatus.NOT_FOUND
-        ));
+        assertThat(accessRequestStatuses).isEqualTo(
+            Map.of(
+                accessRequest1,
+                AccessRequestStatus.NOT_READY,
+                accessRequest2,
+                AccessRequestStatus.READY,
+                accessRequest3,
+                AccessRequestStatus.EXPIRED,
+                unknownAccessRequestId,
+                AccessRequestStatus.NOT_FOUND
+            )
+        );
 
         verify(accessRequestReferentialRepository).findByRequestIds(anySet());
     }
 
     @Test
-    public void givenExistingAccessRequestFromOtherTenantWhenCheckAccessRequestStatusThenNotFound()
-        throws Exception {
-
+    public void givenExistingAccessRequestFromOtherTenantWhenCheckAccessRequestStatusThenNotFound() throws Exception {
         // Given
         String accessRequest1 = generateAccessRequestId();
-        doReturn(List.of(
-            // Non-ready access request
-            new TapeAccessRequestReferentialEntity(accessRequest1, CONTAINER_1,
-                List.of("obj1"), getNowMinusMinutes(30), null, null, null, List.of("tarId1"), TENANT_ID_2, 0)
-        )).when(accessRequestReferentialRepository)
+        doReturn(
+            List.of(
+                // Non-ready access request
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest1,
+                    CONTAINER_1,
+                    List.of("obj1"),
+                    getNowMinusMinutes(30),
+                    null,
+                    null,
+                    null,
+                    List.of("tarId1"),
+                    TENANT_ID_2,
+                    0
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
             .findByRequestIds(Set.of(accessRequest1));
 
         // When
         VitamThreadUtils.getVitamSession().setTenantId(TENANT_ID);
-        Map<String, AccessRequestStatus> accessRequestStatuses =
-            instance.checkAccessRequestStatuses(List.of(accessRequest1), false);
+        Map<String, AccessRequestStatus> accessRequestStatuses = instance.checkAccessRequestStatuses(
+            List.of(accessRequest1),
+            false
+        );
 
         // Then
-        assertThat(accessRequestStatuses).isEqualTo(Map.of(
-            accessRequest1, AccessRequestStatus.NOT_FOUND
-        ));
+        assertThat(accessRequestStatuses).isEqualTo(Map.of(accessRequest1, AccessRequestStatus.NOT_FOUND));
 
         verify(accessRequestReferentialRepository).findByRequestIds(anySet());
     }
@@ -501,25 +714,37 @@ public class AccessRequestManagerTest {
     @Test
     public void givenExistingAccessRequestFromOtherTenantWhenCheckAccessRequestStatusWithAdminTenantThenNotFound()
         throws Exception {
-
         // Given
         VitamThreadUtils.getVitamSession().setTenantId(ADMIN_TENANT);
         String accessRequest1 = generateAccessRequestId();
-        doReturn(List.of(
-            // Non-ready access request
-            new TapeAccessRequestReferentialEntity(accessRequest1, CONTAINER_1,
-                List.of("obj1"), getNowMinusMinutes(30), null, null, null, List.of("tarId1"), TENANT_ID_2, 0)
-        )).when(accessRequestReferentialRepository)
+        doReturn(
+            List.of(
+                // Non-ready access request
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest1,
+                    CONTAINER_1,
+                    List.of("obj1"),
+                    getNowMinusMinutes(30),
+                    null,
+                    null,
+                    null,
+                    List.of("tarId1"),
+                    TENANT_ID_2,
+                    0
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
             .findByRequestIds(Set.of(accessRequest1));
 
         // When
-        Map<String, AccessRequestStatus> accessRequestStatuses =
-            instance.checkAccessRequestStatuses(List.of(accessRequest1), false);
+        Map<String, AccessRequestStatus> accessRequestStatuses = instance.checkAccessRequestStatuses(
+            List.of(accessRequest1),
+            false
+        );
 
         // Then
-        assertThat(accessRequestStatuses).isEqualTo(Map.of(
-            accessRequest1, AccessRequestStatus.NOT_FOUND
-        ));
+        assertThat(accessRequestStatuses).isEqualTo(Map.of(accessRequest1, AccessRequestStatus.NOT_FOUND));
 
         verify(accessRequestReferentialRepository).findByRequestIds(anySet());
     }
@@ -527,25 +752,37 @@ public class AccessRequestManagerTest {
     @Test
     public void givenExistingAccessRequestFromOtherTenantWhenCheckAccessRequestStatusWithNonAdminTenantAndCrossTenantModeEnabledThenNotFound()
         throws Exception {
-
         // Given
         VitamThreadUtils.getVitamSession().setTenantId(TENANT_ID);
         String accessRequest1 = generateAccessRequestId();
-        doReturn(List.of(
-            // Non-ready access request
-            new TapeAccessRequestReferentialEntity(accessRequest1, CONTAINER_1,
-                List.of("obj1"), getNowMinusMinutes(30), null, null, null, List.of("tarId1"), TENANT_ID_2, 0)
-        )).when(accessRequestReferentialRepository)
+        doReturn(
+            List.of(
+                // Non-ready access request
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest1,
+                    CONTAINER_1,
+                    List.of("obj1"),
+                    getNowMinusMinutes(30),
+                    null,
+                    null,
+                    null,
+                    List.of("tarId1"),
+                    TENANT_ID_2,
+                    0
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
             .findByRequestIds(Set.of(accessRequest1));
 
         // When
-        Map<String, AccessRequestStatus> accessRequestStatuses =
-            instance.checkAccessRequestStatuses(List.of(accessRequest1), true);
+        Map<String, AccessRequestStatus> accessRequestStatuses = instance.checkAccessRequestStatuses(
+            List.of(accessRequest1),
+            true
+        );
 
         // Then
-        assertThat(accessRequestStatuses).isEqualTo(Map.of(
-            accessRequest1, AccessRequestStatus.NOT_FOUND
-        ));
+        assertThat(accessRequestStatuses).isEqualTo(Map.of(accessRequest1, AccessRequestStatus.NOT_FOUND));
 
         verify(accessRequestReferentialRepository).findByRequestIds(anySet());
     }
@@ -553,33 +790,43 @@ public class AccessRequestManagerTest {
     @Test
     public void givenExistingAccessRequestFromOtherTenantWhenCheckAccessRequestStatusWithAdminTenantAndCrossTenantModeEnabledThenFound()
         throws Exception {
-
         // Given
         VitamThreadUtils.getVitamSession().setTenantId(ADMIN_TENANT);
         String accessRequest1 = generateAccessRequestId();
-        doReturn(List.of(
-            // Non-ready access request
-            new TapeAccessRequestReferentialEntity(accessRequest1, CONTAINER_1,
-                List.of("obj1"), getNowMinusMinutes(30), null, null, null, List.of("tarId1"), TENANT_ID_2, 0)
-        )).when(accessRequestReferentialRepository)
+        doReturn(
+            List.of(
+                // Non-ready access request
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest1,
+                    CONTAINER_1,
+                    List.of("obj1"),
+                    getNowMinusMinutes(30),
+                    null,
+                    null,
+                    null,
+                    List.of("tarId1"),
+                    TENANT_ID_2,
+                    0
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
             .findByRequestIds(Set.of(accessRequest1));
 
         // When
-        Map<String, AccessRequestStatus> accessRequestStatuses =
-            instance.checkAccessRequestStatuses(List.of(accessRequest1), true);
+        Map<String, AccessRequestStatus> accessRequestStatuses = instance.checkAccessRequestStatuses(
+            List.of(accessRequest1),
+            true
+        );
 
         // Then
-        assertThat(accessRequestStatuses).isEqualTo(Map.of(
-            accessRequest1, AccessRequestStatus.NOT_READY
-        ));
+        assertThat(accessRequestStatuses).isEqualTo(Map.of(accessRequest1, AccessRequestStatus.NOT_READY));
 
         verify(accessRequestReferentialRepository).findByRequestIds(anySet());
     }
 
     @Test
-    public void givenNonExistingAccessRequestWhenRemoveAccessRequestThenOKAndNoReadOrderCanceled()
-        throws Exception {
-
+    public void givenNonExistingAccessRequestWhenRemoveAccessRequestThenOKAndNoReadOrderCanceled() throws Exception {
         // Given
         String accessRequest = generateAccessRequestId();
         doReturn(Optional.empty()).when(accessRequestReferentialRepository).findByRequestId(anyString());
@@ -593,17 +840,28 @@ public class AccessRequestManagerTest {
     }
 
     @Test
-    public void givenReadyAccessRequestWhenRemoveAccessRequestThenOKAndNoReadOrderCanceled()
-        throws Exception {
-
+    public void givenReadyAccessRequestWhenRemoveAccessRequestThenOKAndNoReadOrderCanceled() throws Exception {
         // Given
         VitamThreadUtils.getVitamSession().setTenantId(TENANT_ID);
         String accessRequest = generateAccessRequestId();
-        doReturn(Optional.of(
-            new TapeAccessRequestReferentialEntity(accessRequest, CONTAINER_2,
-                List.of("obj2"), getNowMinusMinutes(30), getNowMinusMinutes(20), getNowPlusMinutes(10),
-                getNowPlusMinutes(40), List.of(), TENANT_ID, 1)
-        )).when(accessRequestReferentialRepository).findByRequestId(accessRequest);
+        doReturn(
+            Optional.of(
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest,
+                    CONTAINER_2,
+                    List.of("obj2"),
+                    getNowMinusMinutes(30),
+                    getNowMinusMinutes(20),
+                    getNowPlusMinutes(10),
+                    getNowPlusMinutes(40),
+                    List.of(),
+                    TENANT_ID,
+                    1
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByRequestId(accessRequest);
 
         // When
         instance.removeAccessRequest(accessRequest, false);
@@ -617,15 +875,27 @@ public class AccessRequestManagerTest {
     @Test
     public void givenAccessRequestFromOtherTenantWhenRemoveAccessRequestWithNonAdminTenantThenNotDeleted()
         throws Exception {
-
         // Given
         VitamThreadUtils.getVitamSession().setTenantId(TENANT_ID);
         String accessRequest = generateAccessRequestId();
-        doReturn(Optional.of(
-            new TapeAccessRequestReferentialEntity(accessRequest, CONTAINER_2,
-                List.of("obj2"), getNowMinusMinutes(30), getNowMinusMinutes(20), getNowPlusMinutes(10),
-                getNowPlusMinutes(40), List.of(), TENANT_ID_2, 1)
-        )).when(accessRequestReferentialRepository).findByRequestId(accessRequest);
+        doReturn(
+            Optional.of(
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest,
+                    CONTAINER_2,
+                    List.of("obj2"),
+                    getNowMinusMinutes(30),
+                    getNowMinusMinutes(20),
+                    getNowPlusMinutes(10),
+                    getNowPlusMinutes(40),
+                    List.of(),
+                    TENANT_ID_2,
+                    1
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByRequestId(accessRequest);
 
         // When
         instance.removeAccessRequest(accessRequest, false);
@@ -639,15 +909,27 @@ public class AccessRequestManagerTest {
     @Test
     public void givenAccessRequestFromOtherTenantWhenRemoveAccessRequestWithAdminTenantThenNotDeleted()
         throws Exception {
-
         // Given
         VitamThreadUtils.getVitamSession().setTenantId(ADMIN_TENANT);
         String accessRequest = generateAccessRequestId();
-        doReturn(Optional.of(
-            new TapeAccessRequestReferentialEntity(accessRequest, CONTAINER_2,
-                List.of("obj2"), getNowMinusMinutes(30), getNowMinusMinutes(20), getNowPlusMinutes(10),
-                getNowPlusMinutes(40), List.of(), TENANT_ID_2, 1)
-        )).when(accessRequestReferentialRepository).findByRequestId(accessRequest);
+        doReturn(
+            Optional.of(
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest,
+                    CONTAINER_2,
+                    List.of("obj2"),
+                    getNowMinusMinutes(30),
+                    getNowMinusMinutes(20),
+                    getNowPlusMinutes(10),
+                    getNowPlusMinutes(40),
+                    List.of(),
+                    TENANT_ID_2,
+                    1
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByRequestId(accessRequest);
 
         // When
         instance.removeAccessRequest(accessRequest, false);
@@ -661,15 +943,27 @@ public class AccessRequestManagerTest {
     @Test
     public void givenAccessRequestFromOtherTenantWhenRemoveAccessRequestWithNonAdminTenantAndCrossTenantModeEnabledThenNotDeleted()
         throws Exception {
-
         // Given
         VitamThreadUtils.getVitamSession().setTenantId(TENANT_ID);
         String accessRequest = generateAccessRequestId();
-        doReturn(Optional.of(
-            new TapeAccessRequestReferentialEntity(accessRequest, CONTAINER_2,
-                List.of("obj2"), getNowMinusMinutes(30), getNowMinusMinutes(20), getNowPlusMinutes(10),
-                getNowPlusMinutes(40), List.of(), TENANT_ID_2, 1)
-        )).when(accessRequestReferentialRepository).findByRequestId(accessRequest);
+        doReturn(
+            Optional.of(
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest,
+                    CONTAINER_2,
+                    List.of("obj2"),
+                    getNowMinusMinutes(30),
+                    getNowMinusMinutes(20),
+                    getNowPlusMinutes(10),
+                    getNowPlusMinutes(40),
+                    List.of(),
+                    TENANT_ID_2,
+                    1
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByRequestId(accessRequest);
 
         // When
         instance.removeAccessRequest(accessRequest, true);
@@ -683,15 +977,27 @@ public class AccessRequestManagerTest {
     @Test
     public void givenAccessRequestFromOtherTenantWhenRemoveAccessRequestWithAdminTenantAndCrossTenantModeEnabledThenNotDeleted()
         throws Exception {
-
         // Given
         VitamThreadUtils.getVitamSession().setTenantId(ADMIN_TENANT);
         String accessRequest = generateAccessRequestId();
-        doReturn(Optional.of(
-            new TapeAccessRequestReferentialEntity(accessRequest, CONTAINER_2,
-                List.of("obj2"), getNowMinusMinutes(30), getNowMinusMinutes(20), getNowPlusMinutes(10),
-                getNowPlusMinutes(40), List.of(), 2, 1)
-        )).when(accessRequestReferentialRepository).findByRequestId(accessRequest);
+        doReturn(
+            Optional.of(
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest,
+                    CONTAINER_2,
+                    List.of("obj2"),
+                    getNowMinusMinutes(30),
+                    getNowMinusMinutes(20),
+                    getNowPlusMinutes(10),
+                    getNowPlusMinutes(40),
+                    List.of(),
+                    2,
+                    1
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByRequestId(accessRequest);
         doReturn(true).when(accessRequestReferentialRepository).deleteAccessRequestById(accessRequest);
 
         // When
@@ -707,17 +1013,31 @@ public class AccessRequestManagerTest {
     @Test
     public void givenNonReadyAccessRequestWithStillInUseArchiveIdWhenRemoveAccessRequestThenOKAndReadOrderNotCanceled()
         throws Exception {
-
         // Given
         String accessRequest = generateAccessRequestId();
-        doReturn(Optional.of(
-            new TapeAccessRequestReferentialEntity(accessRequest, CONTAINER_1,
-                List.of("obj1"), getNowMinusMinutes(30), null, null, null, List.of("tarId1"), TENANT_ID, 0)
-        )).when(accessRequestReferentialRepository).findByRequestId(accessRequest);
+        doReturn(
+            Optional.of(
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest,
+                    CONTAINER_1,
+                    List.of("obj1"),
+                    getNowMinusMinutes(30),
+                    null,
+                    null,
+                    null,
+                    List.of("tarId1"),
+                    TENANT_ID,
+                    0
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByRequestId(accessRequest);
         doReturn(true).when(accessRequestReferentialRepository).deleteAccessRequestById(accessRequest);
 
         doReturn(emptySet())
-            .when(accessRequestReferentialRepository).excludeArchiveIdsStillRequiredByAccessRequests(Set.of("tarId1"));
+            .when(accessRequestReferentialRepository)
+            .excludeArchiveIdsStillRequiredByAccessRequests(Set.of("tarId1"));
 
         // When
         instance.removeAccessRequest(accessRequest, false);
@@ -732,20 +1052,33 @@ public class AccessRequestManagerTest {
     @Test
     public void givenNonReadyAccessRequestWithNoMoreRequiredArchiveIdWhenRemoveAccessRequestThenOKAndReadOrderCanceled()
         throws Exception {
-
         // Given
         String accessRequest = generateAccessRequestId();
-        doReturn(Optional.of(
-            new TapeAccessRequestReferentialEntity(accessRequest, CONTAINER_1,
-                List.of("obj1"), getNowMinusMinutes(30), null, null, null, List.of("tarId1"), TENANT_ID, 0)
-        )).when(accessRequestReferentialRepository).findByRequestId(accessRequest);
+        doReturn(
+            Optional.of(
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest,
+                    CONTAINER_1,
+                    List.of("obj1"),
+                    getNowMinusMinutes(30),
+                    null,
+                    null,
+                    null,
+                    List.of("tarId1"),
+                    TENANT_ID,
+                    0
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByRequestId(accessRequest);
         doReturn(true).when(accessRequestReferentialRepository).deleteAccessRequestById(accessRequest);
 
         doReturn(Set.of("tarId1"))
-            .when(accessRequestReferentialRepository).excludeArchiveIdsStillRequiredByAccessRequests(Set.of("tarId1"));
+            .when(accessRequestReferentialRepository)
+            .excludeArchiveIdsStillRequiredByAccessRequests(Set.of("tarId1"));
 
-        doReturn(emptyList())
-            .when(accessRequestReferentialRepository).findByUnavailableArchiveId("tarId1");
+        doReturn(emptyList()).when(accessRequestReferentialRepository).findByUnavailableArchiveId("tarId1");
 
         // When
         instance.removeAccessRequest(accessRequest, false);
@@ -762,28 +1095,66 @@ public class AccessRequestManagerTest {
     @Test
     public void givenNonReadyAccessRequestWithNoMoreRequiredArchiveIdWhenRemoveAccessRequestAndConcurrentReadOrderCreatedThenOKAndReadOrderCanceledAndReinserted()
         throws Exception {
-
         // Given
 
         String accessRequest1 = generateAccessRequestId();
-        doReturn(Optional.of(
-            new TapeAccessRequestReferentialEntity(accessRequest1, CONTAINER_1,
-                List.of("obj1"), getNowMinusMinutes(30), null, null, null, List.of("tarId1"), TENANT_ID, 0)
-        )).when(accessRequestReferentialRepository).findByRequestId(accessRequest1);
+        doReturn(
+            Optional.of(
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest1,
+                    CONTAINER_1,
+                    List.of("obj1"),
+                    getNowMinusMinutes(30),
+                    null,
+                    null,
+                    null,
+                    List.of("tarId1"),
+                    TENANT_ID,
+                    0
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByRequestId(accessRequest1);
         doReturn(true).when(accessRequestReferentialRepository).deleteAccessRequestById(accessRequest1);
 
         doReturn(Set.of("tarId1"))
-            .when(accessRequestReferentialRepository).excludeArchiveIdsStillRequiredByAccessRequests(Set.of("tarId1"));
+            .when(accessRequestReferentialRepository)
+            .excludeArchiveIdsStillRequiredByAccessRequests(Set.of("tarId1"));
 
         String accessRequest2 = generateAccessRequestId();
-        doReturn(List.of(
-            new TapeAccessRequestReferentialEntity(accessRequest2, CONTAINER_1,
-                List.of("obj1"), now(), null, null, null, List.of("tarId1"), TENANT_ID, 0)
-        )).when(accessRequestReferentialRepository).findByUnavailableArchiveId("tarId1");
+        doReturn(
+            List.of(
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest2,
+                    CONTAINER_1,
+                    List.of("obj1"),
+                    now(),
+                    null,
+                    null,
+                    null,
+                    List.of("tarId1"),
+                    TENANT_ID,
+                    0
+                )
+            )
+        )
+            .when(accessRequestReferentialRepository)
+            .findByUnavailableArchiveId("tarId1");
 
-        doReturn(Optional.of(new TapeArchiveReferentialEntity(
-            "tarId1", new TapeLibraryOnTapeArchiveStorageLocation("tape2", 4321), 10L, "digest1", "date1"))
-        ).when(archiveReferentialRepository).find("tarId1");
+        doReturn(
+            Optional.of(
+                new TapeArchiveReferentialEntity(
+                    "tarId1",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape2", 4321),
+                    10L,
+                    "digest1",
+                    "date1"
+                )
+            )
+        )
+            .when(archiveReferentialRepository)
+            .find("tarId1");
 
         // When
         instance.removeAccessRequest(accessRequest1, false);
@@ -796,8 +1167,9 @@ public class AccessRequestManagerTest {
         verify(accessRequestReferentialRepository).findByUnavailableArchiveId("tarId1");
         verify(archiveReferentialRepository).find("tarId1");
 
-        ArgumentCaptor<QueueMessageEntity> queueMessageEntityArgumentCaptor =
-            ArgumentCaptor.forClass(QueueMessageEntity.class);
+        ArgumentCaptor<QueueMessageEntity> queueMessageEntityArgumentCaptor = ArgumentCaptor.forClass(
+            QueueMessageEntity.class
+        );
         verify(readWriteQueue).addIfAbsent(any(), queueMessageEntityArgumentCaptor.capture());
 
         QueueMessageEntity readOrderMessage = queueMessageEntityArgumentCaptor.getValue();
@@ -815,20 +1187,29 @@ public class AccessRequestManagerTest {
     }
 
     @Test
-    public void givenOldAccessRequestsWhenCleanupOccursThenOldAccessRequestWillBeRemoved()
-        throws Exception {
-
+    public void givenOldAccessRequestsWhenCleanupOccursThenOldAccessRequestWillBeRemoved() throws Exception {
         // Given
         String accessRequest = generateAccessRequestId();
         CountDownLatch timerExecuted = new CountDownLatch(1);
         doAnswer(args -> {
             timerExecuted.countDown();
             return List.of(
-                new TapeAccessRequestReferentialEntity(accessRequest, CONTAINER_1,
-                    List.of("obj2"), getNowMinusMinutes(30), getNowMinusMinutes(20), getNowPlusMinutes(10),
-                    getNowPlusMinutes(40), List.of(), TENANT_ID, 1)
+                new TapeAccessRequestReferentialEntity(
+                    accessRequest,
+                    CONTAINER_1,
+                    List.of("obj2"),
+                    getNowMinusMinutes(30),
+                    getNowMinusMinutes(20),
+                    getNowPlusMinutes(10),
+                    getNowPlusMinutes(40),
+                    List.of(),
+                    TENANT_ID,
+                    1
+                )
             );
-        }).when(accessRequestReferentialRepository).cleanupAndGetExpiredAccessRequests();
+        })
+            .when(accessRequestReferentialRepository)
+            .cleanupAndGetExpiredAccessRequests();
 
         // When
         instance.startExpirationHandler();
@@ -845,30 +1226,59 @@ public class AccessRequestManagerTest {
     @Test
     public void givenArchiveAvailableOnCacheWhenCleanupOccursThenAccessRequestsRequiringArchiveAreUpdated()
         throws Exception {
-
         // Given
         logicalClock.freezeTime();
 
         String accessRequestId1 = generateAccessRequestId();
-        TapeAccessRequestReferentialEntity accessRequest1 =
-            new TapeAccessRequestReferentialEntity(accessRequestId1, CONTAINER_1, List.of("obj1"),
-                getNowMinusMinutes(30), null, null, null, List.of("tarId1", "tarId2"), TENANT_ID, 0);
+        TapeAccessRequestReferentialEntity accessRequest1 = new TapeAccessRequestReferentialEntity(
+            accessRequestId1,
+            CONTAINER_1,
+            List.of("obj1"),
+            getNowMinusMinutes(30),
+            null,
+            null,
+            null,
+            List.of("tarId1", "tarId2"),
+            TENANT_ID,
+            0
+        );
         String accessRequestId2 = generateAccessRequestId();
-        TapeAccessRequestReferentialEntity accessRequest2 =
-            new TapeAccessRequestReferentialEntity(accessRequestId2, CONTAINER_1, List.of("obj2"),
-                getNowMinusMinutes(20), null, null, null, List.of("tarId2"), TENANT_ID, 0);
+        TapeAccessRequestReferentialEntity accessRequest2 = new TapeAccessRequestReferentialEntity(
+            accessRequestId2,
+            CONTAINER_1,
+            List.of("obj2"),
+            getNowMinusMinutes(20),
+            null,
+            null,
+            null,
+            List.of("tarId2"),
+            TENANT_ID,
+            0
+        );
         String accessRequestId3 = generateAccessRequestId();
-        TapeAccessRequestReferentialEntity accessRequest3 =
-            new TapeAccessRequestReferentialEntity(accessRequestId3, CONTAINER_1, List.of("obj3"),
-                getNowMinusMinutes(20), null, null, null, List.of("tarId1", "tarId3"), TENANT_ID, 0);
+        TapeAccessRequestReferentialEntity accessRequest3 = new TapeAccessRequestReferentialEntity(
+            accessRequestId3,
+            CONTAINER_1,
+            List.of("obj3"),
+            getNowMinusMinutes(20),
+            null,
+            null,
+            null,
+            List.of("tarId1", "tarId3"),
+            TENANT_ID,
+            0
+        );
 
         CountDownLatch timerExecuted = new CountDownLatch(1);
         doAnswer(args -> {
             timerExecuted.countDown();
             return List.of(accessRequest1, accessRequest2, accessRequest3);
-        }).when(accessRequestReferentialRepository).findNonReadyAccessRequests();
+        })
+            .when(accessRequestReferentialRepository)
+            .findNonReadyAccessRequests();
 
-        doReturn(List.of(accessRequest1, accessRequest2)).when(accessRequestReferentialRepository)
+        doReturn(List.of(accessRequest1, accessRequest2))
+            .when(accessRequestReferentialRepository)
             .findByUnavailableArchiveId("tarId2");
 
         doReturn(false).when(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId1");
@@ -888,16 +1298,19 @@ public class AccessRequestManagerTest {
         verify(accessRequestReferentialRepository, atLeastOnce()).findByUnavailableArchiveId("tarId2");
         verify(accessRequestReferentialRepository, atLeastOnce()).cleanupAndGetExpiredAccessRequests();
 
-
         ArgumentCaptor<TapeAccessRequestReferentialEntity> updatedAccessRequestsArgumentCaptor =
             ArgumentCaptor.forClass(TapeAccessRequestReferentialEntity.class);
         verify(accessRequestReferentialRepository, times(2)).updateAccessRequest(
-            updatedAccessRequestsArgumentCaptor.capture(), anyInt());
+            updatedAccessRequestsArgumentCaptor.capture(),
+            anyInt()
+        );
 
-        TapeAccessRequestReferentialEntity updatedAccessRequest1 =
-            updatedAccessRequestsArgumentCaptor.getAllValues().get(0);
-        TapeAccessRequestReferentialEntity updatedAccessRequest2 =
-            updatedAccessRequestsArgumentCaptor.getAllValues().get(1);
+        TapeAccessRequestReferentialEntity updatedAccessRequest1 = updatedAccessRequestsArgumentCaptor
+            .getAllValues()
+            .get(0);
+        TapeAccessRequestReferentialEntity updatedAccessRequest2 = updatedAccessRequestsArgumentCaptor
+            .getAllValues()
+            .get(1);
 
         assertThat(updatedAccessRequest1.getRequestId()).isEqualTo(accessRequest1.getRequestId());
         assertThat(updatedAccessRequest1.getObjectNames()).isEqualTo(List.of("obj1"));
@@ -927,8 +1340,7 @@ public class AccessRequestManagerTest {
     public void givenNoAccessRequestAwaitingArchiveAvailabilityWhenArchiveAvailableThenAccessRequestUpdated()
         throws AccessRequestReferentialException {
         // Given
-        doReturn(emptyList())
-            .when(accessRequestReferentialRepository).findByUnavailableArchiveId("tarId1");
+        doReturn(emptyList()).when(accessRequestReferentialRepository).findByUnavailableArchiveId("tarId1");
 
         // When
         instance.updateAccessRequestWhenArchiveReady("tarId1");
@@ -945,15 +1357,34 @@ public class AccessRequestManagerTest {
         logicalClock.freezeTime();
 
         String accessRequestId1 = generateAccessRequestId();
-        TapeAccessRequestReferentialEntity accessRequest1 =
-            new TapeAccessRequestReferentialEntity(accessRequestId1, CONTAINER_1, List.of("obj1"),
-                getNowMinusMinutes(30), null, null, null, List.of("tarId1", "tarId2"), TENANT_ID, 0);
+        TapeAccessRequestReferentialEntity accessRequest1 = new TapeAccessRequestReferentialEntity(
+            accessRequestId1,
+            CONTAINER_1,
+            List.of("obj1"),
+            getNowMinusMinutes(30),
+            null,
+            null,
+            null,
+            List.of("tarId1", "tarId2"),
+            TENANT_ID,
+            0
+        );
         String accessRequestId2 = generateAccessRequestId();
-        TapeAccessRequestReferentialEntity accessRequest2 =
-            new TapeAccessRequestReferentialEntity(accessRequestId2, CONTAINER_1, List.of("obj2"),
-                getNowMinusMinutes(20), null, null, null, List.of("tarId2"), TENANT_ID, 0);
+        TapeAccessRequestReferentialEntity accessRequest2 = new TapeAccessRequestReferentialEntity(
+            accessRequestId2,
+            CONTAINER_1,
+            List.of("obj2"),
+            getNowMinusMinutes(20),
+            null,
+            null,
+            null,
+            List.of("tarId2"),
+            TENANT_ID,
+            0
+        );
         doReturn(List.of(accessRequest1, accessRequest2))
-            .when(accessRequestReferentialRepository).findByUnavailableArchiveId("tarId2");
+            .when(accessRequestReferentialRepository)
+            .findByUnavailableArchiveId("tarId2");
 
         doReturn(true).when(accessRequestReferentialRepository).updateAccessRequest(any(), anyInt());
 
@@ -966,12 +1397,16 @@ public class AccessRequestManagerTest {
         ArgumentCaptor<TapeAccessRequestReferentialEntity> updatedAccessRequestsArgumentCaptor =
             ArgumentCaptor.forClass(TapeAccessRequestReferentialEntity.class);
         verify(accessRequestReferentialRepository, times(2)).updateAccessRequest(
-            updatedAccessRequestsArgumentCaptor.capture(), anyInt());
+            updatedAccessRequestsArgumentCaptor.capture(),
+            anyInt()
+        );
 
-        TapeAccessRequestReferentialEntity updatedAccessRequest1 =
-            updatedAccessRequestsArgumentCaptor.getAllValues().get(0);
-        TapeAccessRequestReferentialEntity updatedAccessRequest2 =
-            updatedAccessRequestsArgumentCaptor.getAllValues().get(1);
+        TapeAccessRequestReferentialEntity updatedAccessRequest1 = updatedAccessRequestsArgumentCaptor
+            .getAllValues()
+            .get(0);
+        TapeAccessRequestReferentialEntity updatedAccessRequest2 = updatedAccessRequestsArgumentCaptor
+            .getAllValues()
+            .get(1);
 
         assertThat(updatedAccessRequest1.getRequestId()).isEqualTo(accessRequest1.getRequestId());
         assertThat(updatedAccessRequest1.getObjectNames()).isEqualTo(List.of("obj1"));
@@ -1002,22 +1437,41 @@ public class AccessRequestManagerTest {
 
         // V0 of access request
         String accessRequestId1 = generateAccessRequestId();
-        TapeAccessRequestReferentialEntity accessRequest1V0 =
-            new TapeAccessRequestReferentialEntity(accessRequestId1, CONTAINER_1, List.of("obj1"),
-                getNowMinusMinutes(30), null, null, null, List.of("tarId1", "tarId2"), TENANT_ID, 0);
+        TapeAccessRequestReferentialEntity accessRequest1V0 = new TapeAccessRequestReferentialEntity(
+            accessRequestId1,
+            CONTAINER_1,
+            List.of("obj1"),
+            getNowMinusMinutes(30),
+            null,
+            null,
+            null,
+            List.of("tarId1", "tarId2"),
+            TENANT_ID,
+            0
+        );
         doReturn(List.of(accessRequest1V0))
-            .when(accessRequestReferentialRepository).findByUnavailableArchiveId("tarId2");
+            .when(accessRequestReferentialRepository)
+            .findByUnavailableArchiveId("tarId2");
 
         // First update fails, second succeeds
         doReturn(false).when(accessRequestReferentialRepository).updateAccessRequest(any(), eq(0));
         doReturn(true).when(accessRequestReferentialRepository).updateAccessRequest(any(), eq(1));
 
         // V1 of access request
-        TapeAccessRequestReferentialEntity accessRequest1V1 =
-            new TapeAccessRequestReferentialEntity(accessRequest1V0.getRequestId(), accessRequest1V0.getContainerName(),
-                accessRequest1V0.getObjectNames(), accessRequest1V0.getCreationDate(), null, null, null,
-                List.of("tarId2"), TENANT_ID, 1);
-        doReturn(Optional.of(accessRequest1V1)).when(accessRequestReferentialRepository)
+        TapeAccessRequestReferentialEntity accessRequest1V1 = new TapeAccessRequestReferentialEntity(
+            accessRequest1V0.getRequestId(),
+            accessRequest1V0.getContainerName(),
+            accessRequest1V0.getObjectNames(),
+            accessRequest1V0.getCreationDate(),
+            null,
+            null,
+            null,
+            List.of("tarId2"),
+            TENANT_ID,
+            1
+        );
+        doReturn(Optional.of(accessRequest1V1))
+            .when(accessRequestReferentialRepository)
             .findByRequestId(accessRequestId1);
 
         // When
@@ -1031,12 +1485,14 @@ public class AccessRequestManagerTest {
         ArgumentCaptor<TapeAccessRequestReferentialEntity> updatedAccessRequestsArgumentCaptor =
             ArgumentCaptor.forClass(TapeAccessRequestReferentialEntity.class);
         verify(accessRequestReferentialRepository, times(2)).updateAccessRequest(
-            updatedAccessRequestsArgumentCaptor.capture(), anyInt());
+            updatedAccessRequestsArgumentCaptor.capture(),
+            anyInt()
+        );
 
-        TapeAccessRequestReferentialEntity firstUpdate =
-            updatedAccessRequestsArgumentCaptor.getAllValues().get(0);
-        TapeAccessRequestReferentialEntity updatedAccessRequest2 =
-            updatedAccessRequestsArgumentCaptor.getAllValues().get(1);
+        TapeAccessRequestReferentialEntity firstUpdate = updatedAccessRequestsArgumentCaptor.getAllValues().get(0);
+        TapeAccessRequestReferentialEntity updatedAccessRequest2 = updatedAccessRequestsArgumentCaptor
+            .getAllValues()
+            .get(1);
 
         assertThat(firstUpdate.getRequestId()).isEqualTo(accessRequestId1);
         assertThat(firstUpdate.getObjectNames()).isEqualTo(List.of("obj1"));
@@ -1059,41 +1515,88 @@ public class AccessRequestManagerTest {
         verifyNoMoreInteractions(accessRequestReferentialRepository);
     }
 
-
-
     @Test
     public void givenAvailableAndNonAvailableObjectsWhenCheckObjectAvailabilityThenFalse() throws Exception {
         // Given :
 
-        doReturn(List.of(
-            // obj1 : still in input_file
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
-                100L, "SHA-512", "digest1", "obj1-guid1", new TapeLibraryInputFileObjectStorageLocation(),
-                nextDate(), nextDate()),
-            // obj2 : in tars
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
-                400L, "SHA-512", "digest2", "obj2-guid2", new TapeLibraryTarObjectStorageLocation(
-                List.of(new TarEntryDescription("tarId1", "obj2-0", 1500L, 100L, "digest2-1"),
-                    new TarEntryDescription("tarId2", "obj2-1", 0L, 100L, "digest2-2"),
-                    new TarEntryDescription("tarId3", "obj2-2", 0L, 100L, "digest2-3"),
-                    new TarEntryDescription("tarId4", "obj2-3", 0L, 100L, "digest2-4"))
-            ), nextDate(), nextDate())
-        )).when(objectReferentialRepository).bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
+        doReturn(
+            List.of(
+                // obj1 : still in input_file
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
+                    100L,
+                    "SHA-512",
+                    "digest1",
+                    "obj1-guid1",
+                    new TapeLibraryInputFileObjectStorageLocation(),
+                    nextDate(),
+                    nextDate()
+                ),
+                // obj2 : in tars
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
+                    400L,
+                    "SHA-512",
+                    "digest2",
+                    "obj2-guid2",
+                    new TapeLibraryTarObjectStorageLocation(
+                        List.of(
+                            new TarEntryDescription("tarId1", "obj2-0", 1500L, 100L, "digest2-1"),
+                            new TarEntryDescription("tarId2", "obj2-1", 0L, 100L, "digest2-2"),
+                            new TarEntryDescription("tarId3", "obj2-2", 0L, 100L, "digest2-3"),
+                            new TarEntryDescription("tarId4", "obj2-3", 0L, 100L, "digest2-4")
+                        )
+                    ),
+                    nextDate(),
+                    nextDate()
+                )
+            )
+        )
+            .when(objectReferentialRepository)
+            .bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
 
-        doReturn(List.of(
-            // Tar1 : Ready on disk
-            new TapeArchiveReferentialEntity("tarId1", new TapeLibraryReadyOnDiskArchiveStorageLocation(),
-                EntryType.DATA, 2000L, "digest-tarId1", nextDate()),
-            // Tar2 : Building on disk
-            new TapeArchiveReferentialEntity("tarId2", new TapeLibraryBuildingOnDiskArchiveStorageLocation(),
-                EntryType.DATA, null, null, nextDate()),
-            // Tar3 : On tape + in cache
-            new TapeArchiveReferentialEntity("tarId3", new TapeLibraryOnTapeArchiveStorageLocation("tape1", 1234),
-                EntryType.DATA, 5000L, "digest-tarId3", nextDate()),
-            // Tar4 : Only on tape
-            new TapeArchiveReferentialEntity("tarId4", new TapeLibraryOnTapeArchiveStorageLocation("tape2", 4321),
-                EntryType.DATA, 8000L, "digest-tarId4", nextDate())
-        )).when(archiveReferentialRepository).bulkFind(Set.of("tarId1", "tarId2", "tarId3", "tarId4"));
+        doReturn(
+            List.of(
+                // Tar1 : Ready on disk
+                new TapeArchiveReferentialEntity(
+                    "tarId1",
+                    new TapeLibraryReadyOnDiskArchiveStorageLocation(),
+                    EntryType.DATA,
+                    2000L,
+                    "digest-tarId1",
+                    nextDate()
+                ),
+                // Tar2 : Building on disk
+                new TapeArchiveReferentialEntity(
+                    "tarId2",
+                    new TapeLibraryBuildingOnDiskArchiveStorageLocation(),
+                    EntryType.DATA,
+                    null,
+                    null,
+                    nextDate()
+                ),
+                // Tar3 : On tape + in cache
+                new TapeArchiveReferentialEntity(
+                    "tarId3",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape1", 1234),
+                    EntryType.DATA,
+                    5000L,
+                    "digest-tarId3",
+                    nextDate()
+                ),
+                // Tar4 : Only on tape
+                new TapeArchiveReferentialEntity(
+                    "tarId4",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape2", 4321),
+                    EntryType.DATA,
+                    8000L,
+                    "digest-tarId4",
+                    nextDate()
+                )
+            )
+        )
+            .when(archiveReferentialRepository)
+            .bulkFind(Set.of("tarId1", "tarId2", "tarId3", "tarId4"));
 
         doReturn(true).when(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId3");
         doReturn(false).when(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId4");
@@ -1121,31 +1624,74 @@ public class AccessRequestManagerTest {
     public void givenAvailableObjectsWhenCheckObjectAvailabilityThenTrue() throws Exception {
         // Given :
 
-        doReturn(List.of(
-            // obj1 : still in input_file
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
-                100L, "SHA-512", "digest1", "obj1-guid1", new TapeLibraryInputFileObjectStorageLocation(),
-                nextDate(), nextDate()),
-            // obj2 : in tars
-            new TapeObjectReferentialEntity(new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
-                400L, "SHA-512", "digest2", "obj2-guid2", new TapeLibraryTarObjectStorageLocation(
-                List.of(new TarEntryDescription("tarId1", "obj2-0", 1500L, 100L, "digest2-1"),
-                    new TarEntryDescription("tarId2", "obj2-1", 0L, 100L, "digest2-2"),
-                    new TarEntryDescription("tarId3", "obj2-2", 0L, 100L, "digest2-3"))
-            ), nextDate(), nextDate())
-        )).when(objectReferentialRepository).bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
+        doReturn(
+            List.of(
+                // obj1 : still in input_file
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj1"),
+                    100L,
+                    "SHA-512",
+                    "digest1",
+                    "obj1-guid1",
+                    new TapeLibraryInputFileObjectStorageLocation(),
+                    nextDate(),
+                    nextDate()
+                ),
+                // obj2 : in tars
+                new TapeObjectReferentialEntity(
+                    new TapeLibraryObjectReferentialId(CONTAINER_1, "obj2"),
+                    400L,
+                    "SHA-512",
+                    "digest2",
+                    "obj2-guid2",
+                    new TapeLibraryTarObjectStorageLocation(
+                        List.of(
+                            new TarEntryDescription("tarId1", "obj2-0", 1500L, 100L, "digest2-1"),
+                            new TarEntryDescription("tarId2", "obj2-1", 0L, 100L, "digest2-2"),
+                            new TarEntryDescription("tarId3", "obj2-2", 0L, 100L, "digest2-3")
+                        )
+                    ),
+                    nextDate(),
+                    nextDate()
+                )
+            )
+        )
+            .when(objectReferentialRepository)
+            .bulkFind(CONTAINER_1, Set.of("obj1", "obj2"));
 
-        doReturn(List.of(
-            // Tar1 : Ready on disk
-            new TapeArchiveReferentialEntity("tarId1", new TapeLibraryReadyOnDiskArchiveStorageLocation(),
-                EntryType.DATA, 2000L, "digest-tarId1", nextDate()),
-            // Tar2 : Building on disk
-            new TapeArchiveReferentialEntity("tarId2", new TapeLibraryBuildingOnDiskArchiveStorageLocation(),
-                EntryType.DATA, null, null, nextDate()),
-            // Tar3 : On tape + in cache
-            new TapeArchiveReferentialEntity("tarId3", new TapeLibraryOnTapeArchiveStorageLocation("tape1", 1234),
-                EntryType.DATA, 5000L, "digest-tarId3", nextDate())
-        )).when(archiveReferentialRepository).bulkFind(Set.of("tarId1", "tarId2", "tarId3"));
+        doReturn(
+            List.of(
+                // Tar1 : Ready on disk
+                new TapeArchiveReferentialEntity(
+                    "tarId1",
+                    new TapeLibraryReadyOnDiskArchiveStorageLocation(),
+                    EntryType.DATA,
+                    2000L,
+                    "digest-tarId1",
+                    nextDate()
+                ),
+                // Tar2 : Building on disk
+                new TapeArchiveReferentialEntity(
+                    "tarId2",
+                    new TapeLibraryBuildingOnDiskArchiveStorageLocation(),
+                    EntryType.DATA,
+                    null,
+                    null,
+                    nextDate()
+                ),
+                // Tar3 : On tape + in cache
+                new TapeArchiveReferentialEntity(
+                    "tarId3",
+                    new TapeLibraryOnTapeArchiveStorageLocation("tape1", 1234),
+                    EntryType.DATA,
+                    5000L,
+                    "digest-tarId3",
+                    nextDate()
+                )
+            )
+        )
+            .when(archiveReferentialRepository)
+            .bulkFind(Set.of("tarId1", "tarId2", "tarId3"));
 
         doReturn(true).when(archiveCacheStorage).containsArchive(FILE_BUCKET_1, "tarId3");
 
@@ -1171,28 +1717,30 @@ public class AccessRequestManagerTest {
 
     @Test
     public void givenMissingParametersWhenCheckObjectAvailabilityThenKO() {
-
-        Assertions.assertThatThrownBy(() -> instance.checkObjectAvailability(CONTAINER_1, null))
-            .isInstanceOf(IllegalArgumentException.class);
-        Assertions.assertThatThrownBy(() -> instance.checkObjectAvailability(CONTAINER_1, Arrays.asList("obj1", null)))
-            .isInstanceOf(IllegalArgumentException.class);
-        Assertions.assertThatThrownBy(() -> instance.checkObjectAvailability(null, List.of("obj1", "obj2")))
-            .isInstanceOf(IllegalArgumentException.class);
-        Assertions.assertThatThrownBy(() -> instance.checkObjectAvailability(CONTAINER_1, emptyList()))
-            .isInstanceOf(ContentAddressableStorageBadRequestException.class);
+        Assertions.assertThatThrownBy(() -> instance.checkObjectAvailability(CONTAINER_1, null)).isInstanceOf(
+            IllegalArgumentException.class
+        );
+        Assertions.assertThatThrownBy(
+            () -> instance.checkObjectAvailability(CONTAINER_1, Arrays.asList("obj1", null))
+        ).isInstanceOf(IllegalArgumentException.class);
+        Assertions.assertThatThrownBy(
+            () -> instance.checkObjectAvailability(null, List.of("obj1", "obj2"))
+        ).isInstanceOf(IllegalArgumentException.class);
+        Assertions.assertThatThrownBy(() -> instance.checkObjectAvailability(CONTAINER_1, emptyList())).isInstanceOf(
+            ContentAddressableStorageBadRequestException.class
+        );
     }
 
     @Test
     public void givenDuplicateObjectsWhenCheckingObjectAvailabilityThenKO() {
-
         // Given
         List<String> objectIds = List.of("obj1", "obj2", "obj1");
 
         // When / Then
-        Assertions.assertThatThrownBy(() -> instance.checkObjectAvailability(CONTAINER_1, objectIds))
-            .isInstanceOf(ContentAddressableStorageBadRequestException.class);
+        Assertions.assertThatThrownBy(() -> instance.checkObjectAvailability(CONTAINER_1, objectIds)).isInstanceOf(
+            ContentAddressableStorageBadRequestException.class
+        );
     }
-
 
     private String nextDate() {
         logicalClock.logicalSleep(1, ChronoUnit.SECONDS);
